--- a/test_entretien_kaybic/src/app/globals.css
+++ b/test_entretien_kaybic/src/app/globals.css
@@ -407,7 +407,7 @@ body {
   width: 50px;
   height: 50px;
   border: 4px solid #f3f3f3;
-  border-top: 4px solid #007bff;
+  border-top: 4px solid #19656e;
   border-radius: 50%;
   animation: spinner-rotation 1s linear infinite;
 }
